--- a/style/scss/styles.scss
+++ b/style/scss/styles.scss
@@ -1,3 +1,8 @@
+img {
+    width: 100% !important;
+    height: 300px !important;
+}
+
 .scrollspySite{
     position: relative;
     overflow: auto;
